@startuml data_model

rectangle camp_site {
    entity site_type {
        id
        --
        name
        created_at
        updated_at
    }

    entity camp_site {
        id
        --
        site_type_id <<FK>>
        site_name
        addition
        access
        phone_number
        url
        price
        image_path
        updated_by
        created_at
        updated_at
    }
    camp_site }|.. site_type

    entity address {
        camp_site_id <<FK>>
        --
        zip_code
        pref_name
        city_name
        other_address
        created_at
        updated_at
    }
    address||--||camp_site

    entity coordinate {
        camp_site_id <<FK>>
        --
        let
        lon
        created_at
        updated_at
    }
    coordinate||--||camp_site

    entity facility {
        id
        --
        name
        created_at
        updated_at
    }

    entity camp_site_facility_rel {
        camp_site_id <<FK>>
        facility_id <<FK>>
        --
        is_exists
        created_at
        updated_at
    }
    camp_site_facility_rel }|.. camp_site
    camp_site_facility_rel }|.. facility
}

rectangle user {
    entity user {
        id
        --
        name
        mail_address
        created_at
        updated_at
    }

    entity review {
        camp_site_id <<FK>>
        user_id <<FK>>
        --
        review_title
        point
        comment
        created_at
        updated_at
    }
    review }|.. camp_site
    review }|.. user

    entity ikitai {
        user_id <<FK>>
        camp_site_id <<FK>>
        --
        created_at
        updated_at
    }
    ikitai }|.. user
    ikitai }|.. camp_site
}

@enduml